--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 rvm:
   - 1.9.3
   - 2.1.5
-script: bundle exec rake spec
+script: bundle exec rake spec_with_coveralls
 notifications:
   recipients:
     - ronen@barzel.org
